--- a/antisurveillance-garment.html
+++ b/antisurveillance-garment.html
@@ -10,125 +10,69 @@
   </head>
   <body>
   
-    <!-- Menu Button -->
-    <div class="header-container">
-      <div class="menu-container" onclick="menuClick(this)">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-        <div id="menuDrop" class="menu-content">
-          <a href="index.html">home</a>
-          <a href="work.html">projects</a>
-          <a href="assets.html">assets</a>
-          <br>
-          <br>
-          <br>
+    <!-- STICKY HEADER: -->
+    <!-- UPPER NAVIGATION: ASSETS & ABOUT PAGES -->
+  
+    <div class="upper-nav">
+      <a href="index.html">FEATURED PROJECTS</a>
+      <a href="assets.html">ASSETS</a>
+      <a href="assets.html">ABOUT</a>
+    </div>
+    <!-- KRISTINWU@UCHICAGO.EDU -->
+    <div class="name-banner">KRISTINWU@UCHICAGO.EDU</div>
+    
+    <div class="item-desc-header">
+      <div class="project-col-gen"> 2022 </div>
+      <div class="project-col-gen"> HOW NOT TO BE SEEN: ANTI-SURVEILLANCE GARMENT </div>
+      <div class="project-col-gen"> FASHION, MACHINE VISION </div>
+      <div class="project-col-gen"> GARMENT PRINT DESIGN, PROJECTION, INSTALLATION, FIELD TESTING </div>
+    </div>
+    <div class="item-desc-header">
+      <div class="project-col"> </div>
+      <div class="project-col">  Description: Designed and fabricated a garment to subvert traditional means of body detection via Detectron2 image segementation. 
+        Created a custom camouflage pattern through abstractions of drone footage of the Chicago skyline. </div>
+      <div class="project-col">  </div>
+      <div class="project-col"> In collaboration with MPCS UChicago student and SAIC Architecture student. With special sewing counsel from SAIC fashion student </div>
+    </div>
+    <br><br>
+    <a href="https://cs.uchicago.edu/news/uchicago-school-of-the-art-institute-class-uses-art-to-highlight-data-privacy-dangers/" 
+      target="_blank" rel="noopener noreferrer"> <div class="indent-text"> FEATURED ARTICLE (CLICK TO READ) </div> </a>
+    <br><br> FABRICATION PROCESS <br><br>
+      <div class="project-grid">
+        <div class="grid-item">
+          <div><img src="imgs/surveillance-aesthetics/urbancamo.jpg"></div>
+          <div><img src="imgs/surveillance-aesthetics/fabri/1.jpg" alt="fabrication photos"></div>
+          <div><img src="imgs/surveillance-aesthetics/fabri/2.jpg" alt="fabrication photos"></div>
+        </div>
+        <div class="grid-item">
+          <div><img src="imgs/surveillance-aesthetics/fabri/3.jpg" alt="fabrication photos"></div>
+          <div><img src="imgs/surveillance-aesthetics/fabri/4.jpg" alt="fabrication photos"></div>
+          <div><img src="imgs/surveillance-aesthetics/fabri/6.jpg" alt="fabrication photos"></div>
         </div>
       </div>
-      <a class = name-to-home href="index.html">
-        <p class = "p-name"> KRISTIN &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp WU</p>
-      </a>
-    </div>
+      <br><br> DEPLOYMENT + DOCUMENTATION<br><br>
+      <div class="project-grid">
+        <div class="grid-item">
+          <div><img src= "imgs/surveillance-aesthetics/garmentdaylight-still.jpeg" alt="documentation photos"></div>
+          <div><img src= "imgs/surveillance-aesthetics/deploy/1.jpeg" alt="documentation photos"></div>
+          <div><img src= "imgs/surveillance-aesthetics/deploy/3.jpeg" alt="documentation photos"></div>
+        </div>
+        <div class="grid-item">
+          <div><img src= "imgs/surveillance-aesthetics/deploy/detect1.png" alt="documentation photos"></div>
+          <div><img src= "imgs/surveillance-aesthetics/deploy/detect2.png" alt="documentation photos"></div>
+          <div><img src= "imgs/surveillance-aesthetics/deploy/detect3.png" alt="documentation photos"></div>
+        </div>
+        <div class="grid-item">
+          <div><img src= "imgs/surveillance-aesthetics/deploy/detect4.png" alt="documentation photos"></div>
+          <div><img src= "imgs/surveillance-aesthetics/deploy/detect5.png" alt="documentation photos"></div>
+          <div><img src= "imgs/surveillance-aesthetics/deploy/detect6.png" alt="documentation photos"></div>
+        </div>
+      </div>
 
-    <p class = "work-txt"> ANTI-SURVEILLANCE GARMENT </p>
-    &nbsp In collaboration with MPCS UChicago student and SAIC Architecture student
-    <br>
-    &nbsp * With special sewing counsel from SAIC fashion student
-    <br>
-    <br>
-    &nbsp 
-    <a href="https://cs.uchicago.edu/news/uchicago-school-of-the-art-institute-class-uses-art-to-highlight-data-privacy-dangers/" 
-      target="_blank" rel="noopener noreferrer"> FEATURED ARTICLE (CLICK TO READ) </a>
-    <br>
-    <br>
-    <p class = "proj-txt"> DESCR: Designed and fabricated a garment to subvert traditional means of body detection via Detectron2 image segementation. 
-      Created a custom camouflage pattern through abstractions of drone footage of the Chicago skyline. 
-    </p>
-    <p class = "subpage-txt"> Tags: Machine/Human Vision, Garment Fabrication </p>
-    <br>
-    <br>
-
-    <!-- Urban Camouflage -->
-    <div class = "project-card">
-        <img class="project-img" src= "imgs/surveillance-aesthetics/urbancamo.jpg" alt="urban camo">
-        <p class = "work-txt"> (URBAN) CAMOUFLAGE PATTERN </p> 
-    </div>
-    <br>
-
-    <!-- Fabrication Fotos -->
-    <div class = "carousel-wrap">
-      <div class = "carousel">
-        <img src="imgs/surveillance-aesthetics/fabri/1.jpg" alt="fabrication photos"/>
-      </div>
-      <div class = "carousel">
-        <img src="imgs/surveillance-aesthetics/fabri/2.jpg" alt="fabrication photos"/>
-      </div>
-      <div class = "carousel">
-        <img src="imgs/surveillance-aesthetics/fabri/3.jpg" alt="fabrication photos"/>
-      </div>
-      <div class = "carousel">
-        <img src="imgs/surveillance-aesthetics/fabri/4.jpg" alt="fabrication photos"/>
-      </div>
-      <div class = "carousel">
-        <img src="imgs/surveillance-aesthetics/fabri/6.jpg" alt="fabrication photos"/>
-      </div>
-    </div>
-    <p class = "work-txt"> FABRICATION PROCESS </p> 
-
-    <br>
-    <br>
-    <!-- Documentation Fotos -->
-    <div class = "carousel-wrap">
-      <div class = "carousel">
-        <img src= "imgs/surveillance-aesthetics/garmentdaylight-still.jpeg" alt="documentation photos">
-      </div>
-      <div class = "carousel">
-        <img src= "imgs/surveillance-aesthetics/deploy/1.jpeg" alt="documentation photos">
-      </div>
-      <div class = "carousel">
-        <img src= "imgs/surveillance-aesthetics/deploy/2.jpeg" alt="documentation photos">
-      </div>
-      <div class = "carousel">
-        <img src= "imgs/surveillance-aesthetics/deploy/3.jpeg" alt="documentation photos">
-      </div>
-      <div class = "carousel">
-        <img src= "imgs/surveillance-aesthetics/deploy/detect1.png" alt="documentation photos">
-      </div>
-      <div class = "carousel">
-        <img src= "imgs/surveillance-aesthetics/deploy/detect2.png" alt="documentation photos">
-      </div>
-      <div class = "carousel">
-        <img src= "imgs/surveillance-aesthetics/deploy/detect3.png" alt="documentation photos">
-      </div>
-      <div class = "carousel">
-        <img src= "imgs/surveillance-aesthetics/deploy/detect4.png" alt="documentation photos">
-      </div>
-      <div class = "carousel">
-        <img src= "imgs/surveillance-aesthetics/deploy/detect5.png" alt="documentation photos">
-      </div>
-      <div class = "carousel">
-        <img src= "imgs/surveillance-aesthetics/deploy/detect6.png" alt="documentation photos">
-      </div>
-    </div>
-    <p class = "work-txt"> DEPLOYMENT + DOCUMENTATION  </p> 
-
-    <!-- Final Installation -->
-    <div class = "carousel-wrap">
-      <div class = "carousel">
+      <br><br> FINAL INSTALLATION <br><br>
+      <div class="project-grid">
         <iframe width="858" height="504" src="https://www.dropbox.com/s/3z1cyc4jnrgn0im/final-install.mp4?raw=1" allowfullscreen></iframe>
-      </div>
-      <div class = "carousel">
         <iframe width="858" height="504" src="https://www.dropbox.com/s/3gzmxqdxsh587eg/final2%20%281%29.mp4?raw=1" allowfullscreen></iframe>
-      </div>
-    </div>
-    <p class = "work-txt"> FINAL INSTALLATION + Ft. MEDIA</p> 
-
-    <br>
-    <br>
-    <br>
-    <!-- Contact footer -->
-    <div class="center-horizontal">
-      <p class = "p-name"> contact &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp kristinwu@uchicago.edu </p>
-    </div>
+      </div> 
   </body>
 </html>
