--- a/fuckurworldview.html
+++ b/fuckurworldview.html
@@ -11,60 +11,40 @@
   <body>
 
     <!-- Menu Button -->
-    <div class="header-container">
-      <div class="menu-container" onclick="menuClick(this)">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-        <div id="menuDrop" class="menu-content">
-          <a href="index.html">home</a>
-          <a href="work.html">projects</a>
-          <a href="assets.html">assets</a>
-          <br>
-          <br>
-          <br>
-        </div>
+    <div class="upper-nav">
+      <a href="index.html">FEATURED PROJECTS</a>
+      <a href="assets.html">ASSETS</a>
+      <a href="assets.html">ABOUT</a>
+    </div>
+    <!-- KRISTINWU@UCHICAGO.EDU -->
+    <div class="name-banner">KRISTINWU@UCHICAGO.EDU</div>
+
+    <div class="item-desc-header">
+      <div class="project-col-gen"> 2022 </div>
+      <div class="project-col-gen"> FUCKURWORLDVIEW </div>
+      <div class="project-col-gen"> WEB, SPECULATIVE ART </div>
+      <div class="project-col-gen"> HTML/CSS, BLENDER (3D), POINTCLOUDS, VIDEO EDITING </div>
+    </div>
+    <div class="item-desc-header">
+      <div class="project-col"> </div>
+      <div class="project-col">  Description: Created engimatic website to appear like the backend of a simulated society. </div>
+      <div class="project-col">  </div>
+      <div class="project-col"> <a href="https://fuckurworldview.neocities.org" target="_blank" rel="noopener noreferrer"> FUCKURWORLDVIEW.NEOCITIES.ORG (CLICK TO PLAY) </a></div>
+   </div>
+
+    <br><br> SOME EMBEDDED MEDIA <br><br>
+    <div class="project-grid">
+      <div class="grid-item">
+        <div> GLITCH POV </div>
+        <div> POINTCLOUD DISSOLVE </div>
+        <div> BUILDING RENDER</div> 
       </div>
-      <a class = name-to-home href="index.html">
-          <p class = "p-name"> KRISTIN &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp WU</p>
-      </a>
+      <div class="grid-item">
+        <div> <img src="https://www.dropbox.com/s/ipoz8lme0w47ara/BUG304-SR5-083154.gif?raw=1"></div>
+        <div> <img src="imgs/fuckurworldview/building_dissolve.gif"></div>
+        <div> <img src="https://www.dropbox.com/s/as8t9ki8yvdf3i3/DF67711_ANOM_PER344211.gif?raw=1"></div> 
+      </div>
     </div>
 
-    <br>
-    <a class= "work-txt" href="https://fuckurworldview.neocities.org" target="_blank" rel="noopener noreferrer" class="p-name"> 
-        FUCKURWORLDVIEW.NEOCITIES.ORG (CLICK TO PLAY) </a>
-    <br>
-    <br>
-    <p class = "proj-txt"> DESCR: Created engimatic website to appear like the backend of a simulated society.
-    </p>
-    <p class = "subpage-txt"> Tags: Speculative Art, HTML/CSS, Simulation, Resolution and Social Hierarchy, Authorization and Access </p>
-    <br>
-
-    <p class = "work-txt"> EMBEDDED MEDIA</p>
-    <!-- Glitch POV -->
-    <div class = "project-card">
-      <iframe class= "featured-img" src="https://www.dropbox.com/s/ipoz8lme0w47ara/BUG304-SR5-083154.gif?raw=1"  alt="glitch_walking pov" allowfullscreen></iframe>
-      <p class = "work-subtxt"> GLITCH POV </p> 
-    </div>
-    <!-- Pointcloud dissolve -->
-    <div class = "carousel-wrap">
-      <div class = "carousel">
-        <img src= "imgs/fuckurworldview/building_dissolve.gif" alt="building dissolve">
-        <p class = "work-subtxt"> POINTCLOUD DISSOLVE  </p> 
-      </div>
-      <!-- Building render -->
-      <div class = "carousel">
-        <img src="https://www.dropbox.com/s/as8t9ki8yvdf3i3/DF67711_ANOM_PER344211.gif?raw=1"  alt="drone shot city: unauthorized rendering">
-        <p class = "work-subtxt"> BUILDING RENDER GLITCH  </p> 
-      </div>
-    </div>
-    
-    <br>
-    <br>
-    <br>
-    <!-- Contact footer -->
-    <div class="center-horizontal">
-      <p class = "p-name"> contact &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp kristinwu@uchicago.edu </p>
-    </div>
   </body>
 </html>
