--- a/index.html
+++ b/index.html
@@ -9,50 +9,123 @@
     <script src="main.js"></script>
   </head>
   <body>
-
-    <!-- Menu Button -->
-    <div class="header-container">
-      <div class="menu-container" onclick="menuClick(this)">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-        <div id="menuDrop" class="menu-content">
-          <a href="index.html">home</a>
-          <a href="work.html">projects</a>
-          <a href="assets.html">assets</a>
-          <!--<a href="3d.html">3D</a>
-          <a href="fashion.html">fashion</a>
-          <a href="photovideo.html">photo&video</a>
-          <a href="sketches.html">sketches&concepts</a> -->
-          <!--<a href="personal.html">about</a> -->
-          <br>
-          <br>
-          <br>
-          <!--<p class = "p-name"> contact &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp kristinwu@uchicago.edu </p>-->
-        </div>
+    <!-- STICKY HEADER: -->
+    <div class="sticky-header">
+      <!-- UPPER NAVIGATION: ASSETS & ABOUT PAGES -->
+      <div class="upper-nav">
+        <a href="assets.html">ASSETS</a>
+        <a href="about.html">ABOUT</a>
       </div>
-      <a class = name-to-home href="index.html">
-          <p class = "p-name"> KRISTIN &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp WU</p>
+      <!-- KRISTINWU@UCHICAGO.EDU -->
+      <div class="name-banner">KRISTINWU@UCHICAGO.EDU</div>
+      <!-- MODES: IMG\TXT -->
+      <div class="project-nav">
+        <div class="project-nav-first"> FEATURED PROJECTS (9) </div>
+
+
+        <div class="project-nav-mode-cur"> IMG </div> 
+        <!--&nbsp \ &nbsp-->
+        <!--<a href="work-copy.html"> TXT</a>-->
+      </div>
+      <!-- GEN HEADER: YEAR, TITLE, CATEGORY, SKILLS -->
+      <div class="item-desc-header">
+        <div class="project-col-gen"> YEAR </div>
+        <div class="project-col-gen"> TITLE </div>
+        <div class="project-col-gen"> CATEGORY </div>
+        <div class="project-col-gen"> SKILLS </div>
+      </div>
+    </div>
+
+    <div class="project-grid">
+      <div class="grid-item">
+        <a href="https://play.unity.com/mg/other/export1-d-1" target="_blank" rel="noopener noreferrer">
+          <img src="imgs/fashion/moda23_still.png">
+            <div class="item-desc">
+              <div class="project-col"> 2023 </div>
+              <div class="project-col"> SS23 FASHION DESIGNS && VIRTUALIZED RUNWAY </div>
+              <div class="project-col"> FASHION, VR </div>
+              <div class="project-col"> BLENDER (3D), UNITY (GAME ENGINE), GARMENT DESIGN, SOUND DESIGN</div>
+            </div>
+        </a>
+        <a href="imgs/3D/cherry.gif" target="_blank" rel="noopener noreferrer">
+            <img src="imgs/3D/cherry.gif">
+            <div class="item-desc">
+              <div class="project-col"> 2023 </div>
+              <div class="project-col"> CHERRYEIGHTY8 && R0GUE: SET VISUALIZER </div>
+              <div class="project-col"> 3D, ANIMATED </div>
+              <div class="project-col"> BLENDER (3D) </div>
+            </div>
+        </a>
+        <a href="https://github.com/k-wu01/c4msynth" target="_blank" rel="noopener noreferrer">
+          <img src="imgs/c4msynth/c4msynth_thumb.png">
+          <div class="item-desc">
+            <div class="project-col"> 2023 </div>
+            <div class="project-col"> C4MSYNTH: WEB BASED INSTRUMENT </div>
+            <div class="project-col"> WEB, MUSIC </div>
+            <div class="project-col"> JAVASCRIPT/HTML/CSS</div>
+          </div>
+        </a>
+      </div>
+
+      <div class="grid-item">
+        <a href="antisurveillance-garment.html" target="_blank" rel="noopener noreferrer">
+          <img src="imgs/surveillance-aesthetics/garmentdaylight-still.jpeg">
+          <div class="item-desc">
+            <div class="project-col"> 2022 </div>
+            <div class="project-col"> HOW NOT TO BE SEEN: ANTI-SURVEILLANCE GARMENT </div>
+            <div class="project-col"> FASHION, MACHINE VISION </div>
+            <div class="project-col"> GARMENT PRINT DESIGN, PROJECTION, INSTALLATION, FIELD TESTING </div>
+          </div>
+        </a>
+        <a href="imgs/3D/dying-in-style/dying-in-style.gif" target="_blank" rel="noopener noreferrer">
+          <img src="imgs/3D/dying-in-style/dying-in-style.gif">
+          <div class="item-desc">
+            <div class="project-col"> 2022 </div>
+            <div class="project-col"> DYING IN STYLE </div>
+            <div class="project-col"> 3D, ANIMATED </div>
+            <div class="project-col"> BLENDER (3D)</div>
+          </div>
       </a>
-    </div>
-  
-    <!-- K LOGO -->
-    <div class="logo">
-      <div class="center-horizontal">
-        <img class="logo-img" src="imgs/k-resize.gif" alt="logo" style="height: 30vh;">
+        <a href="fuckurworldview.html" target="_blank" rel="noopener noreferrer">
+          <img src="imgs/fuckurworldview/building_dissolve.gif">
+          <div class="item-desc">
+            <div class="project-col"> 2022 </div>
+            <div class="project-col"> FUCKURWORLDVIEW </div>
+            <div class="project-col"> WEB, SPECULATIVE ART </div>
+            <div class="project-col"> HTML/CSS, BLENDER (3D), POINTCLOUDS, VIDEO EDITING </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="grid-item">
+        <a href="https://play.unity.com/mg/other/webgl-builds-328556" target="_blank" rel="noopener noreferrer">
+          <img src="imgs/3D/mosque_still.png">
+          <div class="item-desc">
+            <div class="project-col"> 2023 </div>
+            <div class="project-col"> ISTANBUL MOSQUE: 3D RECONSTRUCTION  </div>
+            <div class="project-col"> VR, IMMERSIVE ENVIRONMENT </div>
+            <div class="project-col"> BLENDER (3D), UNITY (GAME ENGINE) </div>
+          </div>
+        </a>
+        <a href="https://youtu.be/Fu45eQu9g_0?si=VWAmQCL7PwekTBrG" target="_blank" rel="noopener noreferrer">
+          <img src="imgs/video-editing/cap_thumb.png">
+          <div class="item-desc">
+            <div class="project-col"> 2023 </div>
+            <div class="project-col"> CAPPADOCIA (+TURKISH SUB): VLOG </div>
+            <div class="project-col"> VIDEO EDITING </div>
+            <div class="project-col"> DA VINCI RESOLVE, HAND-DRAWN ASSETS </div>
+          </div>
+        </a>
+        <a href="imgs/sketches/ar-brush.MP4" target="_blank" rel="noopener noreferrer">
+          <img src="imgs/sketches/ar-brush-thumb2.png">
+          <div class="item-desc">
+            <div class="project-col"> 2021 </div>
+            <div class="project-col"> IRIDESCENT BRUSH PROTOTYPE </div>
+            <div class="project-col"> AR  </div>
+            <div class="project-col"> FIELD XR </div>
+          </div>
+        </a>
       </div>
     </div>
-
-    <!-- About -->
-    <p class = "project-subpage-txt">
-      hello! i'm kristin, a computer science ++ media arts and design student @uchicago. 
-      <br>
-      i'm interested in the areas of new media art, digital fabrication, and fashion
-      <br>
-      <br>
-    </p>
-    <p class = "p-name">
-      contact &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp kristinwu@uchicago.edu
-    </p>
   </body>
 </html>
