new projects + documentation

--- a/index.html
+++ b/index.html
@@ -38,6 +38,36 @@
 
     <div class="project-grid">
       <div class="grid-item">
+        <a href="https://youtu.be/0YOTUX2Ti5s" target="_blank" rel="noopener noreferrer">
+          <img src="imgs/projection/livenoding1_thumb.jpg">
+            <div class="item-desc">
+              <div class="project-col"> 2024 </div>
+              <div class="project-col"> LIVE NODING SAMPLE (GLITCH VER.) </div>
+              <div class="project-col"> PROJECTION, LIVE NODING</div>
+              <div class="project-col"> ISADORA, GLITCH TECHNIQUES </div>
+            </div>
+        </a>
+        <a href="cascades.html" target="_blank" rel="noopener noreferrer">
+            <img src="imgs/cascades/cascades_thumb.png">
+            <div class="item-desc">
+              <div class="project-col"> 2024 </div>
+              <div class="project-col"> METAPHY110 [CASCADES]: BUILDING PROJECTION </div>
+              <div class="project-col"> PROJECTION, VJ, 3D, ANIMATED </div>
+              <div class="project-col"> ISADORA, BLENDER (3D) </div>
+            </div>
+        </a>
+        <a href="capstone.html" target="_blank" rel="noopener noreferrer">
+          <img src="imgs/capstone/ctaggersworld_thumb.jpg">
+          <div class="item-desc">
+            <div class="project-col"> 2024 </div>
+            <div class="project-col"> (C)TAGGER'S WORLD [MADD EXPO] </div>
+            <div class="project-col"> PROJECTION, 3D, LOW-POLY </div>
+            <div class="project-col"> BLENDER (3D), POLYCAM, HAND DRAWN ASSETS, VIDEO EDITING</div>
+          </div>
+        </a>
+      </div>
+
+      <div class="grid-item">
         <a href="https://play.unity.com/mg/other/export1-d-1" target="_blank" rel="noopener noreferrer">
           <img src="imgs/fashion/moda23_still.png">
             <div class="item-desc">
