compressing thumbnail media

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <div class="name-banner">KRISTINWU@UCHICAGO.EDU</div>
       <!-- MODES: IMG\TXT -->
       <div class="project-nav">
-        <div class="project-nav-first"> FEATURED PROJECTS (9) </div>
+        <div class="project-nav-first"> FEATURED PROJECTS (12) </div>
 
 
-        <div class="project-nav-mode-cur"> IMG </div> 
+      <!--<div class="project-nav-mode-cur"> IMG </div> -->
         <!--&nbsp \ &nbsp-->
         <!--<a href="work-copy.html"> TXT</a>-->
       </div>
@@ -69,7 +69,7 @@
 
       <div class="grid-item">
         <a href="https://play.unity.com/mg/other/export1-d-1" target="_blank" rel="noopener noreferrer">
-          <img src="imgs/fashion/moda23_still.png">
+          <img src="imgs/fashion/moda23_still.jpg">
             <div class="item-desc">
               <div class="project-col"> 2023 </div>
               <div class="project-col"> SS23 FASHION DESIGNS && VIRTUALIZED RUNWAY </div>
@@ -129,7 +129,7 @@
 
       <div class="grid-item">
         <a href="https://play.unity.com/mg/other/webgl-builds-328556" target="_blank" rel="noopener noreferrer">
-          <img src="imgs/3D/mosque_still.png">
+          <img src="imgs/3D/mosque_still.jpg">
           <div class="item-desc">
             <div class="project-col"> 2023 </div>
             <div class="project-col"> ISTANBUL MOSQUE: 3D RECONSTRUCTION  </div>
@@ -138,7 +138,7 @@
           </div>
         </a>
         <a href="https://youtu.be/Fu45eQu9g_0?si=VWAmQCL7PwekTBrG" target="_blank" rel="noopener noreferrer">
-          <img src="imgs/video-editing/cap_thumb.png">
+          <img src="imgs/video-editing/cap_thumb.jpg">
           <div class="item-desc">
             <div class="project-col"> 2023 </div>
             <div class="project-col"> CAPPADOCIA (+TURKISH SUB): VLOG </div>
@@ -147,7 +147,7 @@
           </div>
         </a>
         <a href="imgs/sketches/ar-brush.MP4" target="_blank" rel="noopener noreferrer">
-          <img src="imgs/sketches/ar-brush-thumb2.png">
+          <img src="imgs/sketches/ar_thumb.jpg">
           <div class="item-desc">
             <div class="project-col"> 2021 </div>
             <div class="project-col"> IRIDESCENT BRUSH PROTOTYPE </div>
