new formatting for index page

--- a/index.html
+++ b/index.html
@@ -6,37 +6,362 @@
     <title> kristinwu </title>
     <link rel="icon" type="image/x-icon" href="imgs/favicon.ico">
     <link href="styles.css" rel="stylesheet" type="text/css" media="all">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="main.js"></script>
   </head>
   <body>
     <!-- STICKY HEADER: -->
-    <div class="sticky-header">
+   <!-- <div class="sticky-header"> -->
       <!-- UPPER NAVIGATION: ASSETS & ABOUT PAGES -->
-      <div class="upper-nav">
+      <!--<div class="upper-nav">
         <a href="assets.html">ASSETS</a>
         <a href="about.html">ABOUT</a>
-      </div>
+      </div>-->
       <!-- KRISTINWU@UCHICAGO.EDU -->
-      <div class="name-banner">KRISTINWU@UCHICAGO.EDU</div>
+     <!-- <div class="name-banner">KRISTINWU@UCHICAGO.EDU</div> -->
       <!-- MODES: IMG\TXT -->
-      <div class="project-nav">
+    <!--  <div class="project-nav">
         <div class="project-nav-first"> FEATURED PROJECTS (12) </div>
-
-
-      <!--<div class="project-nav-mode-cur"> IMG </div> -->
-        <!--&nbsp \ &nbsp-->
-        <!--<a href="work-copy.html"> TXT</a>-->
-      </div>
+      </div> -->
       <!-- GEN HEADER: YEAR, TITLE, CATEGORY, SKILLS -->
-      <div class="item-desc-header">
+   <!--   <div class="item-desc-header">
         <div class="project-col-gen"> YEAR </div>
         <div class="project-col-gen"> TITLE </div>
         <div class="project-col-gen"> CATEGORY </div>
         <div class="project-col-gen"> SKILLS </div>
       </div>
+    </div> -->
+
+    <div class="split left">
+      
+       <div class="name-desc-container">
+        <div class="name-desc"> Kristin is a designer and visual artist 
+          specializing in live visuals and projection, 
+          motion graphics, 3D modeling, and graphic design.</div> <br>
+        <div class="name-desc-sub">
+          She is currently in creative operation out of Chicago, IL. <br>
+          For enquiries or collaborations, feel free to email kristinwu [@] uchicago.edu </div>
+       </div>
+
+        <div class="exp-edu-skills-container">
+          <span class="exp-edu-skills-title"> Experience </span>
+          <div class="exp">
+            <span class="exp-title"> University of Chicago, Career Advancement </span> <br>
+            <span class="exp-role"> Graphic Design and Visual Arts Intern </span> <br>
+            <span class="exp-sub"> December 2023 - Present </span> <br>
+            <span class="exp-sub"> Chicago, IL </span>
+          </div>
+          <div class="exp">
+            <span class="exp-title"> University of Chicago, Media Arts, Data + Design Center </span> <br>
+            <span class="exp-role"> Arts Technologies Student Staff </span> <br>
+            <span class="exp-sub"> September 2021 - June 2024 </span> <br>
+            <span class="exp-sub"> Chicago, IL </span> <br>
+          </div>
+          <div class="exp">
+            <span class="exp-title"> Video Game Art (VGA) Gallery </span> <br>
+            <span class="exp-role"> Communications Intern </span> <br>
+            <span class="exp-sub"> June 2022 - September 2022 </span> <br>
+            <span class="exp-sub"> Remote </span> <br>
+          </div>
+          <div class="exp">
+            <span class="exp-title"> Lawmato </span> <br>
+            <span class="exp-role"> Website and Research Intern </span> <br>
+            <span class="exp-sub"> June 2022 - September 2022 </span> <br>
+            <span class="exp-sub"> Remote </span> <br>
+          </div>
+
+          <span class="exp-edu-skills-title"> Education </span>
+          <div class="exp">
+            <span class="exp-title"> The University of Chicago </span> <br>
+            <span class="exp-role"> BA in Media Arts and Design, Cluster in Creative Computing </span> <br>
+            <span class="exp-role"> Minor in Computer Science </span> <br>
+            <span class="exp-sub"> September 2020 - June 2024 </span> <br>
+          </div>
+
+          <span class="exp-edu-skills-title"> Skills </span>
+          <div class="skills">
+            <div class="skills-group">
+              <span class="exp-title"> Design</span>: Adobe Illustrator, InDesign, Lightroom, Photoshop, Premiere Pro | Figma <br>
+              <span class="exp-title"> Programming</span>: HTML, CSS, Javascript | Python, Java, C <br>
+              <span class="exp-title"> 3D & Game Dev</span>: Blender, ZBrush | Unity <br>
+            </div>
+            <div class="skills-group">
+              <span class="exp-title"> Live Performance</span>: Isadora <br>
+              <span class="exp-title"> Motion Graphics</span>: DaVinci Resolve <br>
+              <span class="exp-title"> Equipment Management</span>: WebCheckout <br>
+              <span class="exp-title"> Digital Fabrication</span>: 3D Printing, Laser Cutting <br>
+              <span class="exp-title"> Geospatial</span>: QGIS <br>
+              <span class="exp-title"> Audio</span>: Reaper, VCV Rack<br>
+            </div>
+            <div class="skills-group">
+              <span class="exp-title"> Language</span>: Mandarin Chinese, French<br>
+            </div>
+          </div>
+        </div>
+        <br>
     </div>
 
-    <div class="project-grid">
+    <div class="split right">
+      <div class="projs-installs">Select Projects and Installations</div>
+      <div class="proj-container">
+        <div class="proj-thumb">
+          <a href="https://youtu.be/0YOTUX2Ti5s" target="_blank" rel="noopener noreferrer">
+            <img src="imgs/projection/livenoding1_thumb.jpg">
+            <div class="proj-thumb-desc">
+              [External link] Practice Set ft. Glitch Techniques
+            </div>
+          </a>
+        </div>
+        <div class="proj-txt">
+          <span class="exp-title"> "Live-Noding" Visuals </span> 
+          <span class="exp-sub"> &nbsp 2024 </span>
+          <div class="proj-desc"> Project defining new format for presenting live-visuals that integrates the 
+            performance practice of VJing with the ethos of live-coding and live-process builds. 
+          </div>
+          <div class="proj-skills">
+            <span class="exp-title"> Category </span> 
+            <span class="exp-sub"> &nbsp Projection, Live Performance </span> <br>
+            <span class="exp-title"> Software </span> 
+            <span class="exp-sub"> &nbsp Isadora </span> <br>
+          </div>
+        </div>
+      </div>
+
+      <div class="proj-container">
+        <div class="proj-thumb">
+          <a href="cascades.html" target="_blank" rel="noopener noreferrer">
+            <img src="imgs/cascades/cascades_thumb.png">
+            <div class="proj-thumb-desc">
+              [Internal Link] Embedded Media, Technical Documents, Installation Documentation
+            </div>
+          </a>
+        </div>
+        <div class="proj-txt">
+          <span class="exp-title"> METAPHY110 </span> 
+          <span class="exp-sub"> &nbsp May 15, 2024 &nbsp&nbsp Logan Center for the Arts, Chicago, IL</span>
+          <div class="proj-desc"> Building Projection Installation. <br>
+          </div>
+          <div class="proj-skills">
+            <span class="exp-title"> Category </span> 
+            <span class="exp-sub"> &nbsp Outdoor Projection, Live Performance, Motion Graphics </span> <br>
+            <span class="exp-title"> Software </span> 
+            <span class="exp-sub"> &nbsp Isadora, Blender </span> <br>
+          </div>
+        </div>
+      </div>
+
+      <div class="proj-container">
+        <div class="proj-thumb">
+          <a href="capstone.html" target="_blank" rel="noopener noreferrer">
+            <img src="imgs/capstone/ctaggersworld_thumb.jpg">
+            <div class="proj-thumb-desc">
+              [Internal Link] Single Channel Digital File, 3-Channel Projection Installation 
+            </div>
+          </a>
+        </div>
+        <div class="proj-txt">
+          <span class="exp-title"> ©taggers' World </span> 
+          <span class="exp-sub"> &nbsp April 14, 2024 &nbsp&nbsp Media Arts Data + Design Center, Chicago, IL</span>
+          <div class="proj-desc"> 3-Channel Projection Installation featuring 3D modeled and animated low-poly characters, 
+            2D hand-drawn assets, scanned graffiti, and a narrative interweaving themes of cyberculture and technology.<br>
+          </div>
+          <div class="proj-skills">
+            <span class="exp-title"> Category </span> 
+            <span class="exp-sub"> &nbsp Projection, Motion Graphics, 3D Modeling, Video Editing, LiDAR Scanning </span> <br>
+            <span class="exp-title"> Software </span> 
+            <span class="exp-sub"> &nbsp Blender, Adobe Premiere Pro, Polycam, GIMP, Procreate </span> <br>
+          </div>
+        </div>
+      </div>
+
+      <div class="proj-container">
+        <div class="proj-thumb">
+          <img src="imgs/3D/cherry.gif">
+        </div>
+        <div class="proj-txt">
+          <span class="exp-title"> cherryeighty8 & R0GUE Visualizer </span> 
+          <span class="exp-sub"> &nbsp 2023</span>
+          <div class="proj-desc">
+            Set visualizer and logo design for two DJ clients. 
+          </div>
+          <div class="proj-skills">
+            <span class="exp-title"> Category </span> 
+            <span class="exp-sub"> &nbsp 3D Modeling, Motion Graphics </span> <br>
+            <span class="exp-title"> Software </span> 
+            <span class="exp-sub"> &nbsp Blender</span> <br>
+          </div>
+        </div>
+      </div>
+
+      <div class="proj-container">
+        <div class="proj-thumb">
+          <img src="imgs/3D/dying-in-style/dying-in-style.gif">
+        </div>
+        <div class="proj-txt">
+          <span class="exp-title"> DY1NG IN STYL3 </span> 
+          <span class="exp-sub"> &nbsp 2022</span>
+          <div class="proj-desc">
+            Social media graphic for underground music show event promoter. 
+          </div>
+          <div class="proj-skills">
+            <span class="exp-title"> Category </span> 
+            <span class="exp-sub"> &nbsp 3D Modeling, Motion Graphics </span> <br>
+            <span class="exp-title"> Software </span> 
+            <span class="exp-sub"> &nbsp Blender</span> <br>
+          </div>
+        </div>
+      </div>
+
+      <div class="proj-container">
+        <div class="proj-thumb">
+          <a href="https://play.unity.com/mg/other/export1-d-1" target="_blank" rel="noopener noreferrer">
+            <img src="imgs/fashion/moda23_still.jpg">
+            <div class="proj-thumb-desc">
+              [External Link] Unity WebGL Build
+            </div>
+          </a>
+        </div>
+        <div class="proj-txt">
+          <span class="exp-title"> SS23 Virtualized Runway </span> 
+          <span class="exp-sub"> &nbsp 2023</span>
+          <div class="proj-desc">
+            Virtualized fashion show experience featuring personal designs, 3D modeled assets (subway car, chain link fence, personal logo),
+            scanned architecture, and coded user and camera controls.
+          </div>
+          <div class="proj-skills">
+            <span class="exp-title"> Category </span> 
+            <span class="exp-sub"> &nbsp Fashion, VR, LiDAR Scanning </span> <br>
+            <span class="exp-title"> Software & Coding Languages </span> 
+            <span class="exp-sub"> &nbsp Blender, Unity, Polycam, C </span> <br>
+          </div>
+        </div>
+      </div>
+
+      <div class="proj-container">
+        <div class="proj-thumb">
+          <a href="https://k-wu01.github.io/c4msynth/" target="_blank" rel="noopener noreferrer">
+            <img src="imgs/c4msynth/c4msynth_thumb.png">
+            <div class="proj-thumb-desc">
+              [External Link] Playable web-based instrument
+            </div>
+          </a>
+        </div>
+        <div class="proj-txt">
+          <span class="exp-title"> C4MSYNTH </span> 
+          <span class="exp-sub"> &nbsp 2023</span>
+          <div class="proj-desc">
+            Interactive web-based musical instrument that interprets the pixel darkness of user's video feed and 
+            applies the logic of a spectrogram (music visualization technique) to produce sound.
+          </div>
+          <div class="proj-skills">
+            <span class="exp-title"> Category </span> 
+            <span class="exp-sub"> &nbsp Internet Art, Music </span> <br>
+            <span class="exp-title"> Coding Languages</span> 
+            <span class="exp-sub"> &nbsp Javascript, HTML, CSS </span> <br>
+          </div>
+        </div>
+      </div>
+
+      <div class="proj-container">
+        <div class="proj-thumb">
+          <a href="antisurveillance-garment.html" target="_blank" rel="noopener noreferrer">
+            <img src="imgs/surveillance-aesthetics/garmentdaylight-still.jpeg">
+            <div class="proj-thumb-desc">
+              [Internal Link] Fabrication Process, Deployment, Installation Documentation
+            </div>
+          </a>
+        </div>
+        <div class="proj-txt">
+          <span class="exp-title"> How Not to Be Seen: Anti-surveillance Garment </span> 
+          <span class="exp-sub"> &nbsp 2022</span>
+          <div class="proj-desc">
+            Garment prototype to evade body detection from Detectron2 image segmentation. Features 
+            custom-designed and hand-dyed urban camouflage pattern abstracted from drone footage 
+            of the Chicago skyline.
+          </div>
+          <div class="proj-skills">
+            <span class="exp-title"> Category </span> 
+            <span class="exp-sub"> &nbsp Fashion, Machine Vision, Video Editing </span> <br>
+            <span class="exp-title"> Software</span> 
+            <span class="exp-sub"> &nbsp Detectron2, GIMP, Premiere Pro </span> <br>
+          </div>
+        </div>
+      </div>
+
+      <div class="proj-container">
+        <div class="proj-thumb">
+          <a href="fuckurworldview.html" target="_blank" rel="noopener noreferrer">
+            <img src="imgs/fuckurworldview/building_dissolve.gif">
+            <div class="proj-thumb-desc">
+              [Internal Link] Embedded Media, Link to Playthrough
+            </div>
+          </a>
+        </div>
+        <div class="proj-txt">
+          <span class="exp-title"> FUCKURWORLDVIEW </span> 
+          <span class="exp-sub"> &nbsp 2022</span>
+          <div class="proj-desc">
+            Engimatic web-project intended to appear as the backend of a simulated society. Features media 
+            generated from command line visual effects, photogrammetry and pointcloud representations, and Google Earth and mapping data. 
+          </div>
+          <div class="proj-skills">
+            <span class="exp-title"> Category </span> 
+            <span class="exp-sub"> &nbsp Internet Art, Photogrammetry, Command Line</span> <br>
+            <span class="exp-title"> Software</span> 
+            <span class="exp-sub"> &nbsp FFMPEG, Blender, Regard3D, HTML/CSS/Javascript </span> <br>
+          </div>
+        </div>
+      </div>
+
+      <div class="proj-container">
+        <div class="proj-thumb">
+          <a href="https://play.unity.com/mg/other/webgl-builds-328556" target="_blank" rel="noopener noreferrer">
+            <img src="imgs/3D/mosque_still.jpg">
+            <div class="proj-thumb-desc">
+              [External Link] Unity WebGL Build
+            </div>
+          </a>
+        </div>
+        <div class="proj-txt">
+          <span class="exp-title"> Arap Camii (Istanbul) </span> 
+          <span class="exp-sub"> &nbsp 2023</span>
+          <div class="proj-desc">
+            3D, digital reconstruction of mosque in Istanbul. Features audio from imam prayer.
+          </div>
+          <div class="proj-skills">
+            <span class="exp-title"> Category </span> 
+            <span class="exp-sub"> &nbsp VR, LiDAR Scanning </span> <br>
+            <span class="exp-title"> Software</span> 
+            <span class="exp-sub"> &nbsp Blender, Unity, Polycam </span> <br>
+          </div>
+        </div>
+      </div>
+      <div class="proj-container">
+        <div class="proj-thumb">
+          <a href="imgs/sketches/ar-brush.MP4" target="_blank" rel="noopener noreferrer">
+            <img src="imgs/sketches/ar_thumb.jpg">
+            <div class="proj-thumb-desc">
+              [Internal Link] Prototype Demonstration
+            </div>
+          </a>
+        </div>
+        <div class="proj-txt">
+          <span class="exp-title"> Iridescent Brush Prototype </span> 
+          <span class="exp-sub"> &nbsp 2021</span>
+          <div class="proj-skills">
+            <span class="exp-title"> Category </span> 
+            <span class="exp-sub"> &nbsp AR </span> <br>
+            <span class="exp-title"> Software</span> 
+            <span class="exp-sub"> &nbsp FieldXR </span> <br>
+          </div>
+        </div>
+      </div>
+    <br>
+    </div>
+
+
+    <!--<div class="project-grid">
       <div class="grid-item">
         <a href="https://youtu.be/0YOTUX2Ti5s" target="_blank" rel="noopener noreferrer">
           <img src="imgs/projection/livenoding1_thumb.jpg">
@@ -156,6 +481,6 @@
           </div>
         </a>
       </div>
-    </div>
+    </div>-->
   </body>
 </html>
