--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
         <div class="exp-edu-skills-container">
           <span class="exp-edu-skills-title"> Experience </span>
           <div class="exp">
+            <span class="exp-title"> Secured Data Services </span> <br>
+            <span class="exp-role"> Digital Marketing Designer </span> <br>
+            <span class="exp-sub"> September 2024 - Present </span> <br>
+            <span class="exp-sub"> Remote </span>
+          </div>
+          <div class="exp">
             <span class="exp-title"> University of Chicago, Career Advancement </span> <br>
             <span class="exp-role"> Graphic Design and Visual Arts Intern </span> <br>
-            <span class="exp-sub"> December 2023 - Present </span> <br>
+            <span class="exp-sub"> December 2023 - June 2024 </span> <br>
             <span class="exp-sub"> Chicago, IL </span>
           </div>
           <div class="exp">
@@ -104,14 +110,16 @@
 
     <div class="split right">
       <div class="projs-installs">Select Projects and Installations</div>
+
+      <!-- LIVE NODING -->
       <div class="proj-container">
         <div class="proj-thumb">
-          <a href="https://youtu.be/0YOTUX2Ti5s" target="_blank" rel="noopener noreferrer">
-            <img src="imgs/projection/livenoding1_thumb.jpg">
-            <div class="proj-thumb-desc">
-              [External link] Practice Set ft. Glitch Techniques
-            </div>
-          </a>
+          <div class="proj-thumb-vid">
+            <iframe src="https://www.youtube.com/embed/0YOTUX2Ti5s"></iframe>
+          </div>
+          <!--<div class="proj-thumb-desc">
+            Practice Set ft. Glitch Techniques
+          </div>-->
         </div>
         <div class="proj-txt">
           <span class="exp-title"> "Live-Noding" Visuals </span> 
@@ -128,10 +136,28 @@
         </div>
       </div>
 
+      <!-- CASCADES -->
       <div class="proj-container">
         <div class="proj-thumb">
           <a href="cascades.html" target="_blank" rel="noopener noreferrer">
-            <img src="imgs/cascades/cascades_thumb.png">
+          <div class="carousel" id="cascades">
+            <button class="carousel-button prev" data-carousel-button="prev">&#10094;</button>
+            <button class="carousel-button next" data-carousel-button="next">&#10095;</button>
+            <uL>
+              <li class="slide" active>
+                <div class="proj-thumb-vid">
+                  <iframe src="https://www.youtube.com/embed/_EoQmDzg7K0?si=2bukBzzMdj7gmOKg"></iframe>
+                </div>
+              </li>
+              <li class="slide">
+                <div class="proj-thumb-vid">
+                  <iframe src="https://www.dropbox.com/scl/fi/rmsngm1mnm4phurdqf20j/cascades_documentation_vertical.mp4?rlkey=yz0j4lm6wc7twfd8g8wyijam1&st=qjk68xl8&raw=1"></iframe>
+                </div>
+              </li>
+            </uL>
+          </div>
+
+            <!--<img src="imgs/cascades/cascades_thumb.png">-->
             <div class="proj-thumb-desc">
               [Internal Link] Embedded Media, Technical Documents, Installation Documentation
             </div>
